src/bgworker/snapshots/loco_rs__bgworker__pg__tests__can_enqueue.snap
---
source: src/bgworker/pg.rs
expression: jobs
---
[
    Job {
        id: "<REDACTED>",
        name: "PasswordChangeNotification",
        data: Object {
            "user_id": Number(1),
        },
        status: Queued,
        run_at: <REDACTED>,
        interval: None,
        created_at: Some(
            <REDACTED>,
        ),
        updated_at: Some(
            <REDACTED>,
        ),
        tags: None,
        priority: 0,
    },
]
