src/bgworker/snapshots/loco_rs__bgworker__pg__tests__can_fail_job.snap
---
source: src/bgworker/pg.rs
expression: after_fail_job
snapshot_kind: text
---
Job {
    id: "<REDACTED>",
    name: "SendInvoice",
    data: Object {
        "email": String("user13@example.com"),
        "error": String("some error"),
        "invoice_id": String("INV-2024-01"),
        "user_id": Number(135),
    },
    status: Failed,
    run_at: <REDACTED>,
    interval: None,
    created_at: Some(
        <REDACTED>,
    ),
    updated_at: Some(
        <REDACTED>,
    ),
    tags: None,
}
